見出し修正

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header class="header">
-      <img src="images/img-headerlogo.png" alt="ベーカリーパンヤマダ" class="header-logo">
+	    <h1><img src="images/img-headerlogo.png" alt="ベーカリーパンヤマダ" class="header-logo"></h1>
       <img src="images/hamburger-icon.png" alt="" class="navi-icon">
       <ul class="header-navi">
         <li><a href="index.html" class="navi-list">HOME</a></li>
@@ -30,7 +30,7 @@
 
     <section class="news">
       <div class="news-container">
-        <h1 class="news-heading">news</h1>
+        <h2 class="news-heading">news</h2>
         <p class="news-lineup top">4/8　新メニュー　シュガーマヨネーズパン登場！</p>
         <p class="news-lineup">4/6　スタンプカード5倍デー</p>
         <p class="news-lineup">4/4　新製法でリニューアル　あんぱん改 登場！</p>
@@ -55,14 +55,14 @@
 
     <section class="ranking">
       <div class="ranking-container">
-        <h1 class="ranking-heading"><img class="ranking-heading-img" src="images/ranking-title.png" alt="人気のパンBEST3"></h1>
+        <h2 class="ranking-heading"><img class="ranking-heading-img" src="images/ranking-title.png" alt="人気のパンBEST3"></h2>
         <div class="contents-wrapper">
           <div class="contents">
             <img src="images/ranking1.jpg" alt="メロンパンの画像" class="ranking-img">
             <div class="contents-inner">
               <img src="images/ribon1.png" alt="第一位" class="pop">
             </div>
-            <h2 class="contents-menu">昔懐かしメロンパン</h2>
+            <h3 class="contents-menu">昔懐かしメロンパン</h3>
             <p class="contents-text">昔ながらの素朴な味わいが、不動の人気のメロンパンです。<br>お子様からお年寄りまで、幅広い層のお客様に愛されています。</p>
           </div>
           <div class="contents">
@@ -70,7 +70,7 @@
             <div class="contents-inner">
               <img src="images/ribon2.png" alt="第二位" class="pop">
             </div>
-            <h2 class="contents-menu">具だらけカレーパン</h2>
+            <h3 class="contents-menu">具だらけカレーパン</h3>
             <p class="contents-text">カリカリの表面と、しっかりと した具の食感がよく合うカレー パンです。<br> お子様も食べやすい、やや甘口 のカレーです。</p>
           </div>
           <div class="contents">
@@ -78,7 +78,7 @@
             <div class="contents-inner">
               <img src="images/ribon3.png" alt="第三位" class="pop">
             </div>
-            <h2 class="contents-menu">いつもの食パン</h2>
+            <h3 class="contents-menu">いつもの食パン</h3>
             <p class="contents-text">バターの風味たっぷりで、何も 付けなくても美味しく召し上が っていただける食パンです。 たくさんのリピーター様に愛さ れる、朝食の定番です。</p>
           </div>
         </div>
@@ -97,7 +97,7 @@
           <img src="images/delivery.png" alt="配送トラックの画像" class="delivery-img">
         </div>
         <div class="text-wrap">
-          <h1 class="delivery-heading">全国配送いたします。</h1>
+          <h2 class="delivery-heading">全国配送いたします。</h2>
           <p class="delivery-txt">北海道から沖縄まで、全国送料一律３０００円 ポッキリで、お客様のお手元まで美味しいパン をお届けいたします。</p>
           <small class="notes">※冷凍できる商品に限ります。</small>
           <a class="cart-btn" href="cart.html">ご注文はこちら</a>
@@ -107,7 +107,7 @@
 
     <section class="faq">
       <div class="faq-container">
-        <h1 class="faq-heading">よくあるご質問</h1>
+        <h2 class="faq-heading">よくあるご質問</h2>
         <dl class="toggle">
           <div class="toggle-inner">
             <dt class="accordion-click">Q 営業日・営業時間はいつですか？</dt>
