見出し修正

--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
 
   <body class="menu-body">
     <header class="header">
-      <img src="images/img-headerlogo.png" alt="ベーカリーパンヤマダ" class="header-logo">
+	    <h1><img src="images/img-headerlogo.png" alt="ベーカリーパンヤマダ" class="header-logo"></h1>
       <img src="images/hamburger-icon.png" alt="" class="navi-icon">
       <ul class="header-navi">
         <li><a href="index.html" class="navi-list">HOME</a></li>
@@ -25,9 +25,9 @@
     <main>
       <article class="menu">
         <div class="menu-container">
-          <h1 class="heading1">menu</h1>
+          <h2 class="heading1">menu</h2>
           <p class="heading-ja">商品一覧</p>
-          <h2 class="category">菓子パン</h2>
+          <h3 class="category">菓子パン</h3>
           <div class="contents-wrapper">
             <div class="contents">
               <p class="pop">人気メニュー！</p>
@@ -57,7 +57,7 @@
             </div>
           </div>
 
-          <h2 class="category">お食事パン</h2>
+          <h3 class="category">お食事パン</h3>
           <div class="contents-wrapper">
             <div class="contents">
               <p class="pop">人気メニュー！</p>
@@ -86,7 +86,7 @@
             </div>          
           </div>
             
-          <h2 class="category">ブレッド系</h2>
+          <h3 class="category">ブレッド系</h3>
           <div class="contents-wrapper">
             <div class="contents">
               <p class="pop">人気メニュー！</p>
