見出し修正

--- a/cart.html
+++ b/cart.html
@@ -11,7 +11,7 @@
 
   <body>
     <header class="header">
-      <img src="images/img-headerlogo.png" alt="ベーカリーパンヤマダ" class="header-logo">
+	    <h1><img src="images/img-headerlogo.png" alt="ベーカリーパンヤマダ" class="header-logo"></h1>
       <img src="images/hamburger-icon.png" alt="" class="navi-icon">
       <ul class="header-navi">
         <li><a href="index.html" class="navi-list">HOME</a></li>
@@ -24,7 +24,7 @@
 
     <main class="shopping-wrapper">
       <div class="shopping-container">
-        <h1 class="heading1">shopping</h1>
+        <h2 class="heading1">shopping</h2>
         <p class="heading-ja">ご注文フォーム</p>
         <form action="#" name="form1" >
           <table class="shopping-form" >
