見出し修正

--- a/aboutus.html
+++ b/aboutus.html
@@ -11,7 +11,7 @@
 
   <body>
     <header class="header">
-      <img src="images/img-headerlogo.png" alt="ベーカリーパンヤマダ" class="header-logo">
+	    <h1><img src="images/img-headerlogo.png" alt="ベーカリーパンヤマダ" class="header-logo"></h1>
       <img src="images/hamburger-icon.png" alt="" class="navi-icon">
       <ul class="header-navi">
         <li><a href="index.html" class="navi-list">HOME</a></li>
@@ -24,27 +24,27 @@
 
     <main class="aboutus-wrapper">
       <div class="aboutus-container">
-        <h1 class="heading1">about us</h1>
+        <h2 class="heading1">about us</h2>
         <p class="heading-ja">当店について</p>
         <div class="aboutus-contents-wrap">
           <div class="contents top">
             <img src="images/aboutus-img1.jpg" alt="周囲からひと際浮いた店構え。ベーカリーパンヤマダ　外観画像" class="aboutus-img">
             <div class="txt-container">
-              <h2 class="contents-heading"><img src="images/komugi-icon.png" class="heading-icon" alt="">地域の皆様に愛されて３０年<img src="images/komugi-icon.png" class="heading-icon" alt=""></h2>
+              <h3 class="contents-heading"><img src="images/komugi-icon.png" class="heading-icon" alt="">地域の皆様に愛されて３０年<img src="images/komugi-icon.png" class="heading-icon" alt=""></h3>
               <p class="contents-txt">駅前のやたらと浮いた店構えでおなじみ、ベーカリー　パンヤマダは、おかげさまで創業３０年を迎えることができました。<br> 今年から全国配送サービスも開始し、今までご愛顧くださった地元の皆様はもちろん、全国の皆様にも最高のパンをお届けして参ります！</p>
             </div>
           </div>
           <div class="contents">
             <img src="images/aboutus-img2.jpg" alt="丹精込めてパンを作る手元画像" class="aboutus-img">
             <div class="txt-container">
-              <h2 class="contents-heading"><img src="images/komugi-icon.png" class="heading-icon" alt="">店長こだわりの定番メニュー<img src="images/komugi-icon.png" class="heading-icon" alt=""></h2>
+              <h3 class="contents-heading"><img src="images/komugi-icon.png" class="heading-icon" alt="">店長こだわりの定番メニュー<img src="images/komugi-icon.png" class="heading-icon" alt=""></h3>
               <p class="contents-txt">期間限定の攻めたメニューも、もちろん張り切って作っておりますが、店主は昔からある定番メニューに強いこだわりを持っています。<br>メロンパンやカレーパン、焼きそばパン等、この国の独特で素晴らしいパン文化を極めるため、日々丹精込めて定番のパンを作り続けています。</p>
             </div>
           </div>
           <div class="contents">
             <img src="images/aboutus-img3.jpg" alt="落ち着いた雰囲気が素敵なイートインスペースの画像" class="aboutus-img">
             <div class="txt-container">
-              <h2 class="contents-heading"><img src="images/komugi-icon.png" class="heading-icon" alt="">イートインスペース新設<img src="images/komugi-icon.png" class="heading-icon" alt=""></h2>
+              <h3 class="contents-heading"><img src="images/komugi-icon.png" class="heading-icon" alt="">イートインスペース新設<img src="images/komugi-icon.png" class="heading-icon" alt=""></h3>
               <p class="contents-txt">長年のお客様のご要望にお応えし、購入したパンを。すぐに召し上がっていただけるイートインス ペースを新設いたしました！<br> コーヒーや紅茶の販売機や、レジ前でのミルクやジュースのパック飲料の販売もありますので、お飲み物と共に焼き立てのパンをご賞味ください。</p>
             </div>
           </div>
