見出し修正

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="ja">
-	<head>
+　<head>
     <meta charset="utf-8">
     <meta name="description" content="架空市で人気NO1のパン屋さん「ベーカリー・パンヤマダ」です。小さなこともお気軽にお問い合わせください。">
 		<title>ほっこり美味しいパン屋さん/ベーカリーパンヤマダお問い合わせページ</title>
@@ -11,7 +11,7 @@
 
   <body>
     <header class="header">
-      <img src="images/img-headerlogo.png" alt="ベーカリーパンヤマダ" class="header-logo">
+	    <h1><img src="images/img-headerlogo.png" alt="ベーカリーパンヤマダ" class="header-logo"></h1>
       <img src="images/hamburger-icon.png" alt="" class="navi-icon">
       <ul class="header-navi">
         <li><a href="index.html" class="navi-list">HOME</a></li>
@@ -24,7 +24,7 @@
 
     <main class="contact-wrapper">
       <div class="contact-container">
-        <h1 class="heading1">contact us</h1>
+        <h2 class="heading1">contact us</h2>
         <p class="heading-ja">お問い合わせフォーム</p>
 
         <form class="contact-form" method="POST" action="#">
